CCD-8234: Rich text area validation runs on attributes (#2991)
* CCD-8234: Updated the html attributes allowed

* Bumping chart version/ fixing aliases

* CCD-8234: Updated the default values

* CCD-8234: Inserting @notNull due to the methods inheriting non null params

* CCD-8234: Fixed checkstyle

---------

Co-authored-by: hmcts-jenkins-a-to-c <62422075+hmcts-jenkins-a-to-c[bot]@users.noreply.github.com>
Co-authored-by: dinesh1patel <74076102+dinesh1patel@users.noreply.github.com>